nice attempt kekW

--- a/.env
+++ b/.env
@@ -1,7 +1,1 @@
-DB_USER=postgres
-DB_PSW=nice_cock13
-
-DB_HOST=localhost
-DB_PORT=5432
-
-DB_NAME=humu
+DATABASE_URL="postgresql://postgres:vegetita777@localhost:5432/booking"
